Update author info and social links

--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 title: "ByteSizedSecurity"
-author: "Admin"
+author: "Marc"
 description: "Cybersecurity Insights & Analysis - Providing in-depth analysis on the latest security threats, vulnerabilities, and defense mechanisms."
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
-email: "contact@bytesizedsecurity.com"
+email: "marc@bytesizedsecurity.show"
 twitter_username: "bytesizedsec"
-github_username: "bytesizedsecurity"
-linkedin_username: "bytesizedsecurity"
+github_username: "mda1125"
+linkedin_username: "marccdavid"
 #facebook_username: username
 #flickr_username: username
 #instagram_username: username
