Update Twitter username

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: "Cybersecurity Insights & Analysis - Providing in-depth analysis on
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
 email: "marc@bytesizedsecurity.show"
-twitter_username: "bytesizedsec"
+twitter_username: "marc_david"
 github_username: "mda1125"
 linkedin_username: "marccdavid"
 #facebook_username: username
